student/style.css
@font-face {font-family:"owners";
src:url("/fonts/owners-bold.woff2") format("woff2");
font-style:normal;font-weight:700;font-stretch:normal;font-display: swap}
@font-face {font-family: 'space-mono';
src:url("/fonts/space-mono-bold.woff2") format("woff2");
font-style:normal;font-weight:700;font-stretch:normal;font-display: swap}
@font-face {
font-family: 'space-mono';
src:url("/fonts/space-mono.woff2") format("woff2");
font-style:normal;font-weight:500;font-stretch:normal;font-display: swap}

* {text-decoration: none;}
body {margin: 0px 0px 0px 0px; background: var(--black);}
html {scroll-behavior: smooth; --black: #121212; --yellow: #DDDC26; --white: #F3F2EB;}
h1 {font-family: "owners", sans-serif; letter-spacing: 1pt; margin: 0; font-size: 32px;}
h2 {font-family: "space-mono", monospace; font-weight: 400; font-style: normal; font-size: 16px;}
symbol {font-family: "space-mono", monospace; font-weight: 700; font-style: normal; font-size: 16px;}

a {color: inherit;}
html {scroll-behavior: smooth}

.student-banner {
    height: 70vh;
}

.fill {height: 100%; width:100%; background-color: rgba(0, 0, 0, 0.7)}

.student-banner2 {
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    height: 30vh;
}

.student-banner, .student-banner2 {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
    width: 100vw;
    display: flex;
    flex-direction: row;
    z-index: 2;
}

.student-banner-container, .student-quote-container {
    height: 100%;
    background-color: rgba(0, 0, 0, 0.7);
    display: flex;
    color: var(--white);
    box-sizing: border-box;
}

.student-banner-container {
    flex: 2;
    flex-direction: column-reverse;
    padding: 50px;
    line-height: 45px}

.student-quote-container {
    width: 310px;
    flex-direction: column;
    padding: 50px;
    justify-content: flex-end;
    align-items: flex-end;
    text-align: end;
    line-height: 30px}

.student-quote-container > h1 {font-size: 28px !important;}

.links {
    width: 100%;
    color: var(--white);
    border-width: 1px 0px 2px 2px;
    text-align: left;
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 15px;
    overflow-x: scroll}

.link {
    height: 55px;
    width: fit-content;
    padding: 10px 15px;
    box-sizing: border-box;
    background-color: var(--black);
    color: var(--white);
    border-style: solid; 
    border-color: #f3f2eb69;
    border-width: 2px;
    display: flex;
    align-items: center;
    gap: 15px}

.link:hover {border-color: var(--white);}
.link:active {border-color: var(--white) !important;background-color: var(--white) !important;color: var(--black);}
.link > h1 {font-size: 18px; margin-block-start: 1px; margin-block-end: 0; line-height: 0;}

.student-work {
    margin: auto;
    justify-items: center;
    max-width: 1200px;
    width: 100vw;
    padding: 25px; 
    display: flex;
    box-sizing: border-box; 
    gap: 25px; 
    flex-direction: row; 
    flex-wrap: wrap;
    justify-content: center;
    background-color: var(--black)
}

.work {
    height: 500px;
    min-width: 500px;
    max-width: 700px;
    flex: 1;
    background-color: var(--yellow);
    background-size: cover;
    background-position: center
}

#menuToggle {
    display: block;
    position: fixed;
    top: 25px;
    left: 20px;
    height: 0;
    width: 0;
    z-index: 999;
    user-select: none
}

a {text-decoration: none}
ul {list-style-type: none}

#menuToggle input {
    display: block;
    width: 40px;
    height: 32px;
    position: absolute;
    top: -7px;
    left: -5px;
    cursor: pointer;
    opacity: 0;
    z-index: 999;
    -webkit-touch-callout: none
}

#menuToggle span {
    display: block;
    width: 33px;
    height: 4px;
    margin-bottom: 5px;
    position: relative;
    background: var(--white);
    border-radius: 0;
    z-index: 1;
    left: 0px;
    transform-origin: 4px 0px;
    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                opacity 0.55s ease
}

#menuToggle span:first-child {transform-origin: 0% 0%;}
#menuToggle span:nth-last-child(2) {transform-origin: 0% 100%}

#menuToggle input:checked ~ span {opacity: 1; transform: rotate(45deg) translate(-2px, -1px); background: var(--black);}

#menuToggle input:checked ~ span:nth-last-child(3) {opacity: 0;transform: rotate(0deg) scale(0.2, 0.2)}
#menuToggle input:checked ~ span:nth-last-child(2) {transform: rotate(-45deg) translate(0, -1px)}

.menu {
    height: 100vh;
    width: 100vw;
    margin: -100px 0 0 -60px;
    padding: 75px;
    padding-top: 125px;
    background-attachment: fixed;
    background: linear-gradient(0.75turn, var(--yellow) 1%, #ffff8dce 10%);
    -webkit-backdrop-filter: blur(12px);
    backdrop-filter: blur(12px);
    transform-origin: 0% 0%;
    transform: translate(calc(-100%), 0);
    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
    display: flex;
    gap: 25px 0;
    flex-direction: column
}

#menuToggle input:checked ~ ul {transform: none}

.nav1 {display: none}

.topnav {
    width: 100%;
	padding: 15px;
	padding-left: 30px;
    position: fixed;
    overflow: hidden;
    background: linear-gradient(0.5turn, #121212 0%, #121212c7 20%, #1212127a 40%, #1212124a 60%, #12121222 75%, #1212120a 90%, #12121200 100%)
}

.topnav h1 {
    float: left;
    color: #ffffff78;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 16px;
}

.topnav a h1:hover {color: var(--yellow)}
.topnav a h1.active {color: var(--white);}

.work-page {
    top: 0;
    width: 100%;
    height: 100%;
    position: fixed;
    background-color: rgb(0, 0, 0, 0.8);
    backdrop-filter: blur(16px);
    -webkit-backdrop-filter: blur(16px);
    -moz-backdrop-filter: blur(16px);
    z-index: 999;
    display: none;
    align-items: center;
    justify-content: center;
    gap: 50px;
    flex-direction: row;
    box-sizing: border-box;
}

.work-page-image {
    max-width: 400px;
}

.category {
    display: flex; 
    gap:10px;
    align-items:center;
}

.work-page-info {width: 500px;}
.work-page-info h1 {color: var(--white);}
.category symbol, .category h1 {color: var(--yellow) !important; font-size: 16px;}
.work-page-info h2 {color: var(--white);}
.student-banner-name {font-size: 50px;}
.student-banner-symbol {font-size: 50px; color: var(--yellow);}

.close {
    height: 100%;
    width: fit-content;
    padding: 10px 15px;
    box-sizing: border-box;
    background-color: var(--black);
    color: var(--white);
    border-style: solid; 
	border-color: #f3f2eb69;
    border-width: 2px;
    display: flex;
    align-items: center;
    gap: 15px;
    z-index: 9999;
}

.footer {
    border-style: solid;
    border-width: 2px 0 0 0;
    border-color: var(--white);
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    width: 100%;
    padding-top: 20px;
    padding-bottom: 20px;
    background: #000}

.footer-column > a {padding: 0;}
.footer-column > h1 {color: var(--yellow)}
.footer-column > h2 {color: var(--white)}
.footer-column > a > h2 {color: var(--white) !important}

.footer-column {width: 25%; box-sizing: border-box;}
.footer-logo {width: 100px; height:fit-content; padding: 50px;}
.website-end {
    background-color: var(--yellow);
    padding: 0px 100px 0px 100px;
    display: flex;
    justify-content: center;
    box-sizing: border-box;
    text-align: center}

@media only screen and (max-width: 1074px) {
    .work {
        height: 700px;
        min-width: 500px;
    }
    .student-work {max-width: 700px;}
}

@media only screen and (max-width: 850px) {
    .footer {
        flex-direction: column;
        padding: 25px;
        gap: 20px}
    .footer-column {width: 100%;}
    .website-end {
        background-color: var(--yellow);
        padding: 0px;
        display: flex;
        justify-content: center;
    }
    .footer-logo {
        box-sizing: border-box;
        width: 100%;
        height: auto;
        padding: 20px;
    }
}

@media only screen and (max-width: 950px) {
    .work-page-image {
        max-height: fit-content;
        min-width: 50px;
        max-width: 300px;
    }
    .work-page-info {width: 300px}
    .work-page-info h2 {overflow: scroll}
    .student-banner, .student-banner2 {
        background-size: cover;
        background-repeat: no-repeat;
        background-position: top;
        background-attachment: scroll}

    .work {
        height: none;
        min-width: 90%;}
    .student-banner2 {
        height: fit-content;
        width: 100vw;
        flex-direction: column-reverse;}
    .student-banner {
        height: 0;
        width: 100vw;
        flex-direction: row;
    }
    .student-quote-container {
        width: 100%;
        max-height: 100%;
        flex-direction: row;
        padding: 100px 50px 50px calc(100% - 270px)
    }
    .student-work {max-width: 100vw;}
}

@media only screen and (max-width: 750px) {
    .work-page {flex-direction: column; padding-bottom: 50px}
    .work-page-image {
        max-height: 300px;
        min-width: 50px;
        margin-top: 100px;
    }
    .work-page-info {width: 90%; overflow: scroll;}
    .work {height: 400px;}
    .student-work {max-width: 500px;}
    
}

@media only screen and (max-width: 600px) {
    html {--black: #000;} 
    .nav1 {display: block}
    .topnav {display: none}
    .links {
        justify-content: flex-start;}
    .close {
        top: 25px;
        right: 25px;
        height: fit-content;
        position: absolute;
    }

    .work-page-image {max-height: 400px;min-width: 0; max-width: 80%;}

    .student-banner2 {
        min-height: 300px; 
        transition: 700ms;
        -webkit-transition: 700ms;
        -moz-transition: 700ms;
        background-position: center;}

    body.user-is-scrolling .student-banner2 {
        min-height: 0;}

    .student-quote-container {
        padding: 20px 20px 20px calc(100% - 240px);
        max-height: 500px;
        transition: 300ms;
        -webkit-transition: 300ms;
        -moz-transition: 300ms;
    }

    body.user-is-scrolling .student-quote-container {
        max-height: 0;
        padding: 0 20px 0 calc(100% - 240px);
        overflow: hidden;
    }

    .student-banner-container symbol {
        max-height: 200px;
        overflow: hidden;
        padding: 0;
        opacity: 1;
    }

    body.user-is-scrolling .student-banner-container symbol {
        opacity: 0;
        max-height: 0;
    }

    .student-banner-container {
        display: flex;
        flex-direction: column-reverse;
        padding: 20px;
    }

    .student-banner-name, .student-banner-symbol {
        font-size: 34px;
        transition: 700ms;
        -webkit-transition: 700ms;
        -moz-transition: 700ms;
    }

    body.user-is-scrolling .student-banner-name {font-size: 22px}

    body.user-is-scrolling .student-banner-container {
        min-height: 70px !important;
        line-height: 21px;
        min-height: 0;
        justify-content: center;
        padding: 11px 20px 11px 73px; 
        transition: 500ms;
        -webkit-transition: 500ms;
        -moz-transition: 500ms;}
}

@media only screen and (max-width: 400px) {
    .work-page-image {max-height: 300px; max-width: 90%}
    .work {height: 300px}
}

.work-hover {
    height: 100%;
    width: 100%;
    flex: 1;
    color: var(--black);
    background: linear-gradient(0.25turn, var(--yellow) 0%, #ffff8d9a 100%);
    opacity: 0;
    display: flex;
    align-items: center;
    justify-content: center;
}

.close:hover {border-color: var(--white);}
.close:active {border-color: var(--white) !important;background-color: var(--white) !important;color: var(--black);}

.work-hover symbol {font-size: 128px;}

.work-hover:hover {opacity: 1; z-index: 1;}

.animate{
    transition: 500ms;
    -webkit-transition: 500ms;
    -moz-transition: 500ms;
}

